# Reproducibility_AR

./: README.md
ar-supplemental/: blackjack.py  df.csv  df.pkl  prove single.ipynb  prove.ipynb  toy_mrp.ipynb  trap.py
ar-supplemental/az-stoch/open_spiel/: CMakeLists.txt
ar-supplemental/az-stoch/open_spiel/algorithms/: CMakeLists.txt  mcts.cc  mcts_fo.cc  mcts_fo.h
ar-supplemental/az-stoch/open_spiel/algorithms/alpha_zero_torch_eval/: CMakeLists.txt  alpha_zero.cc  alpha_zero.h  device_manager.h  mcts_eval.cc  mcts_eval.h  model.cc  model.h  model_test.cc  vpevaluator.cc  vpevaluator.h  vpnet.cc  vpnet.h  vpnet_test.cc
ar-supplemental/az-stoch/open_spiel/algorithms/alpha_zero_torch_opp/: CMakeLists.txt  alpha_zero.cc  alpha_zero.h  device_manager.h  model.cc  model.h  model_test.cc  vpevaluator.cc  vpevaluator.h  vpnet.cc  vpnet.h  vpnet_test.cc
ar-supplemental/az-stoch/open_spiel/examples/: CMakeLists.txt  alpha_zero_torch_eval_example.cc  alpha_zero_torch_example.cc  alpha_zero_torch_opp_example.cc
ar-supplemental/az-stoch/open_spiel/games/: go.cc  go.h  go_test.cc
ar-supplemental/df/: df_0.02.csv  df_0.02_n.csv  df_0.05.csv  df_0.05_n.csv  df_0.05_n_prova.csv  df_1.csv  df_1_bj.csv  df_1_bj_prova.csv  df_1_n.csv  df_2.csv  df_2_n.csv  df_AR.csv
ar-supplemental/stoch_mcts/agent/: agent.py
ar-supplemental/stoch_mcts/game/: game.py
ar-supplemental/stoch_mcts/mcts/: backpropagator.py  evaluator.py  graph.py  mcts.py  path.py  selector.py
ar-supplemental/stoch_mcts/trainer/: trainer.py
(+8 files in other folders)
